Add system of record and update register

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .vagrant
 concept-my-property
 concept-performance-dashboard
+concept-system-of-record
 concept-titles-service
+concept-update-register
