Add concept-register-data to bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 concept-homepage
 concept-my-property
 concept-performance-dashboard
+concept-register-data
 concept-system-of-record
 concept-titles-service
 concept-update-register
