--- a/fig.yml
+++ b/fig.yml
@@ -52,3 +52,10 @@ titlesdb:
     POSTGRESQL_USER: titles
     POSTGRESQL_PASS: password
     POSTGRESQL_DB: titles
+geo:
+  build: concept-geo-service/
+  command: sh -c "sleep 4; python app.py"
+  ports:
+   - "8005:8005"
+  volumes:
+   - concept-geo-service:/code
