--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .vagrant
 concept-homepage
-concept-my-property
+concept-frontend
 concept-performance-dashboard
 concept-register-data
 concept-system-of-record
 concept-titles-service
 concept-update-register
 concept-geo-service
+concept-thirdparty
+concept-official-copy
