--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vagrant
 concept-homepage
-concept-my-property
+concept-frontend
 concept-performance-dashboard
 concept-register-data
 concept-system-of-record
