Cloned helmi03 dockerfile directly for use in fig.yml.
Changed fig.yml to point to new system-of-record

Added new repos to bootstrap script for dev environments.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ concept-update-register
 concept-geo-service
 concept-thirdparty
 concept-official-copy
+system-of-record
+mint
+docker-postgis
+.DS_Store
