--- a/fig-concept.yml
+++ b/fig-concept.yml
@@ -25,10 +25,10 @@ updateregister:
   links:
    - systemofrecord
 systemofrecord:
-  build: system-of-record/
+  build: concept-system-of-record/
   command: ./run.py
   volumes:
-   - system-of-record:/code
+   - concept-system-of-record:/code
   ports:
    - "8003:8003"
   links:
