--- a/fig.yml
+++ b/fig.yml
@@ -1,10 +1,12 @@
-homepage:
-  build: concept-homepage/
-  command: python app.py
-  ports:
-   - "8000:8000"
 systemofrecord:
   build: system-of-record/
   command: ./run.py
   ports:
    - "8001:8001"
+mint:
+  build: mint/
+  command: ./run.py
+  ports:
+   - "8002:8002"
+  links:
+   - systemofrecord
